--- a/GPSWebTesting/template/login.html
+++ b/GPSWebTesting/template/login.html
@@ -12,7 +12,7 @@
     <div class="login-container">
         <div class="login-box">
             <div class="user-icon">👤</div>
-            <h2>Flota GPS - Ingreso</h2>
+            <h2>Ingreso</h2>
 
             <form>
                 <label for="username">Usuario *</label>
