cambio en la navbar de empleado

--- a/GPSWebTesting/template/empleado.html
+++ b/GPSWebTesting/template/empleado.html
@@ -17,10 +17,10 @@
                 <h2>GLOBAL TRACK</h2>
             </div>
             <nav class="menu">
-                <a href="{% url 'inicio' %}" class="active">Inicio</a>
-                <a href="{% url 'perfil' %}">Perfil</a>
-                <a href="{% url 'reportes' %}">Reportes</a>
-                <a href="{% url 'logout' %}">Cerrar Sesión</a>
+                <a href="#" class="active">Inicio</a>
+                <a href="#">Perfil</a>
+                <a href="#">Reportes</a>
+                <a href="#">Cerrar Sesión</a>
             </nav>
         </aside>
 
