Se añadio el Logout (probar en plantilla de Empleado)

--- a/GPSWebTesting/template/empleado.html
+++ b/GPSWebTesting/template/empleado.html
@@ -20,7 +20,7 @@
                 <a href="#" class="active">Inicio</a>
                 <a href="#">Perfil</a>
                 <a href="#">Reportes</a>
-                <a href="#">Cerrar Sesión</a>
+                <a href="{% url 'logout' %}">Cerrar sesión</a> <!--Probar si funciona el Logout ☻-->
             </nav>
         </aside>
 
